Remplissage des vraies données

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -23,7 +23,7 @@
 
         <div class="section-title">
           <h2>A propos</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Je suis un jeune étudiant passionné d’informatique, plus précisément de développement web. Je développe des solutions permettant de résoudre les problèmes de plusieurs personnes à travers le monde et simplifier au mieux leur expérience de la vie de tous les jours par le biais d’internet. J’aime le cinéma, les jeux vidéos et la course à pied.</p>
         </div>
 
         <div class="row">
@@ -33,8 +33,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Informaticien - Developpeur Web</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Développer des applications et des sites web.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -56,8 +55,7 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Je passe la plupart de mon temps libre de travail à m'améliorer dans le développement et à faire des veille pour toujours être au courant des dernières avancées technologiques.
             </p>
           </div>
         </div>
@@ -122,7 +120,7 @@
 
         <div class="section-title">
           <h2>Compétences</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Je suis un développeur autonome, créatif et professionnel. Passionné des travaux de backend (Administration de base de données, Conception d’API, administration de serveur…) je peux réaliser des tâches de front end (intégration web, …) ou encore de maquettage.</p>
         </div>
 
         <div class="row skills-content">
@@ -201,8 +199,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resumé</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Résumé</h2>
+          <p>Je suis un étudiant en fin de cycle de licence ayant fait des stages académiques et professionnels dans des entreprises et participé à des projets d'équipe.</p>
         </div>
 
         <div class="row">
@@ -210,7 +208,7 @@
             <h3 class="resume-title">Qui suis-je ?</h3>
             <div class="resume-item pb-0">
               <h4>Serge Mezui</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Je suis un jeune gabonais en 3eme année d’université en Gestion de Systèmes d’Information au Cameroun.</em></p>
               <ul>
                 <li>Yaoundé, Cameroun</li>
                 <li>sergemezui2@gmail.com</li>
@@ -222,32 +220,32 @@
               <h4>Licence en Gestion des Systèmes d'Information</h4>
               <h5>2020 - 2023 (en cours)</h5>
               <p><em>Institut Universitaire Catholique Sainte Thérèse de Yaoundé, Yaoundé, Cameroun</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>Licence en Gestion de Systèmes d’Information (en cours…).</p>
             </div>
             <div class="resume-item">
-              <h4>Brevet de Technicien Superieur</h4>
+              <h4>Brevet de Technicien Supérieur</h4>
               <h5>2022</h5>
               <p><em>Yaoundé, Cameroun</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>Le Brevet de Technicien Supérieur de l'enseignement supérieur camerounais session Mai 2022, Gestion de Systèmes d’Information, mention Bien.</p>
             </div>
             <div class="resume-item">
               <h4>Baccalauréat série C</h4>
               <h5>2020</h5>
               <p><em>Lycée Monseigneur BESSIEUX, Libreville, Gabon</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p>Baccalauréat de l’enseignement général gabonais session 2019-2020, série C, mention Passable.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Experience Professionelle</h3>
+            <h3 class="resume-title">Expérience Professionnelle</h3>
             <div class="resume-item">
               <h4>Développeur BackEnd &amp; Directeur Technique</h4>
               <h5>2022 - Maintenaint</h5>
               <p><em>La Communauté, Yaoundé, Cameroun </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Gestion des ressources techniques liés aux projets;</li>
+                <li>Supervision de l’avancement des travaux;</li>
+                <li>Conception des api des différents projets;</li>
+                <li>Conception des espaces d’administration des projets.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -255,10 +253,9 @@
               <h5>Août - Octobre 2021 (Stage Accadémique)</h5>
               <p><em>e-Robot Entreprise, Yaoundé, Cameroun</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Conception de la maquette du site;</li>
+                <li>Développement du site web (site vitrine);</li>
+                <li>Enseignement de formation;</li>
               </ul>
             </div>
           </div>
@@ -393,39 +390,39 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Ces compétences me permettent de pouvoir vous aider à réaliser vos projets ou vous aider à résoudre vos problèmes de :</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Création de site web personalisé</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <h4 class="title"><a href="">Création de site web personnalisé</a></h4>
+            <p class="description">Faites créer vos sites personnalisés comme celui-ci pour vous faire connaître sur le marché du web.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
             <h4 class="title"><a href="">Conception de mini Web App</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <p class="description">Faites créer des mini applications web pour vous permettre de réaliser des tâches quotidiennes plus simplement.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Conseption d'API REST</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <h4 class="title"><a href="">Conception d'API REST</a></h4>
+            <p class="description">Faites concevoir vos API pour vous permettre de centraliser la logique métier de vos projets et gérer vos bases de données.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
             <h4 class="title"><a href="">Maquettage de site</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <p class="description">Visualiser le résultat final de vos sites ou applications web à travers des maquettes simples et interactives.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Realisation de site vitrine</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            <h4 class="title"><a href="">Réalisation de site vitrine</a></h4>
+            <p class="description">Faites créer un site vitrine pour vous permettre de présenter vos produits, réalisations, etc. a tout le monde.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Travail en equipe de developpement de projet</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <h4 class="title"><a href="">Travail en equipe de développement de projet</a></h4>
+            <p class="description">Invitez-moi dans un projet de développement.</p>
           </div>
         </div>
 
@@ -525,13 +522,14 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Contactez moi en utilisant l’un de ces liens ou en m’envoyant un mail.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
 
           <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
+        
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Lacalisation :</h4>
@@ -550,6 +548,14 @@
                 <p>+237 692 041 334 <br> +241 074 669 285</p>
               </div>
 
+
+              <div class="profile w-100 d-flex my-5 justify-content-evenly">
+                    <a href="https://twitter.com/serge_mezui" class="twitter"><i class="bx bxl-twitter"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100071863734818" class="facebook"><i class="bx bxl-facebook"></i></a>
+                    <a href="https://www.instagram.com/sergemezui" class="instagram"><i class="bx bxl-instagram"></i></a>
+                    <a href="https://github.com/SergeMezui16" class="github"><i class="bx bxl-github"></i></a>
+                    <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              </div>
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
 
