Fix: faute d'ortographe

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -532,7 +532,7 @@
         
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Lacalisation :</h4>
+                <h4>Localisation :</h4>
                 <p>NGOA EKELE, Yaoundé, Cameroun</p>
               </div>
 
