Feature: Recaptcha pour le formulaire de contact

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
         {% endblock %}
         
         <!-- Matomo -->
-        <script>
+        {# <script>
         var _paq = window._paq = window._paq || [];
         /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
         _paq.push(['trackPageView']);
@@ -40,7 +40,7 @@
             var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
             g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
         })();
-        </script>
+        </script> #}
         <!-- End Matomo Code -->
     </head>
 
@@ -108,7 +108,7 @@
         <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
         <script src="/assets/vendor/typed.js/typed.min.js"></script>
         <script src="/assets/vendor/waypoints/noframework.waypoints.js"></script>
-        <script src="/assets/vendor/php-email-form/validate.js"></script>
+        {# <script src="/assets/vendor/php-email-form/validate.js"></script> #}
 
         <!-- Template Main JS File -->
         <script src="/assets/js/main.js"></script>
