Fix: affichier l'age de facon dyamique

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -41,7 +41,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Nom:</strong> <span>MEZUI SIANI TCHAPIE</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Prénom:</strong> <span>Serge Pasker</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Nationalité:</strong> <span>Gabonaise </span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20 ans</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>{{ ('now' | date('Y')) - 2002  }} ans</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ville:</strong> <span>Yaoundé, Cameroun</span></li>
                 </ul>
               </div>
