--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,8 +9,8 @@
 
         {% block stylesheets %}
         <!-- Favicons -->
-        <link href="/assets/img/favicon.png" rel="icon">
-        <link href="/assets/img/favicon.png" rel="apple-touch-icon">
+        <link href="/assets/img/favicon-v2.png" rel="icon">
+        <link href="/assets/img/favicon-v2.png" rel="apple-touch-icon">
 
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -28,7 +28,7 @@
         {% endblock %}
         
         <!-- Matomo -->
-        {# <script>
+        <script>
         var _paq = window._paq = window._paq || [];
         /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
         _paq.push(['trackPageView']);
@@ -40,7 +40,7 @@
             var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
             g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
         })();
-        </script> #}
+        </script>
         <!-- End Matomo Code -->
     </head>
 
@@ -51,7 +51,7 @@
             <div class="d-flex flex-column">
 
             <div class="profile">
-                <img src="/assets/img/avatar-mini.png" alt="" class="img-fluid rounded-circle">
+                <img src="/assets/img/avatar-mini-v2.png" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light"><a href="index.html">Serge Mezui</a></h1>
                 <div class="social-links mt-3 text-center">
                     <a href="https://twitter.com/serge_mezui" class="twitter"><i class="bx bxl-twitter"></i></a>
