--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -28,7 +28,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="/assets/img/avatar.png" class="img-fluid" alt="">
+            <img src="/assets/img/avatar-v2.png" class="img-fluid" alt="Serge Mezui Photo" loading="lazy">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Informaticien - Developpeur Web</h3>
